--- a/package.json
+++ b/package.json
@@ -8,12 +8,22 @@
   },
   "author": "",
   "license": "ISC",
+  "browserslist": [
+    "last 2 chrome versions",
+    "last 2 ios versions",
+    "last 2 firefox versions"
+  ], 
   "dependencies": {
+    "core-js": "^3.37.1",
     "gulp-cli": "^3.0.0",
     "jquery": "^3.7.1",
     "webpack-stream": "^7.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
+    "babel-loader": "^9.1.3",
     "gulp": "^5.0.0",
     "webpack": "^5.92.1",
     "webpack-cli": "^5.1.4"
