--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "last 2 chrome versions",
     "last 2 ios versions",
     "last 2 firefox versions"
-  ], 
+  ],
   "dependencies": {
     "core-js": "^3.37.1",
     "gulp-cli": "^3.0.0",
@@ -25,6 +25,7 @@
     "@babel/preset-react": "^7.24.7",
     "babel-loader": "^9.1.3",
     "gulp": "^5.0.0",
+    "gulp-sass": "^5.1.0",
     "webpack": "^5.92.1",
     "webpack-cli": "^5.1.4"
   }
