--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "core-js": "^3.37.1",
     "gulp-cli": "^3.0.0",
     "jquery": "^3.7.1",
+    "sass": "^1.77.6",
     "webpack-stream": "^7.0.0"
   },
   "devDependencies": {
