--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-cli": "^3.0.0",
     "jquery": "^3.7.1",
     "sass": "^1.77.6",
+    "uikit": "^3.21.6",
     "webpack-stream": "^7.0.0"
   },
   "devDependencies": {
