--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
     "core-js": "^3.37.1",
     "gulp-cli": "^3.0.0",
     "jquery": "^3.7.1",
@@ -29,8 +30,8 @@
     "babel-loader": "^9.1.3",
     "gulp": "^5.0.0",
     "gulp-sass": "^5.1.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "webpack": "^5.92.1",
     "webpack-cli": "^5.1.4"
   }
