--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react_admin",
+  "name": "project",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,29 +10,26 @@
   "license": "ISC",
   "browserslist": [
     "last 2 chrome versions",
-    "last 2 ios versions",
-    "last 2 firefox versions"
+    "last 2 firefox versions",
+    "last 2 ios versions"
   ],
   "dependencies": {
-    "axios": "^1.7.2",
-    "bootstrap": "^5.3.3",
-    "core-js": "^3.37.1",
-    "gulp-cli": "^3.0.0",
-    "jquery": "^3.7.1",
-    "sass": "^1.77.6",
-    "uikit": "^3.21.6",
-    "webpack-stream": "^7.0.0"
+    "axios": "^0.19.0",
+    "core-js": "^3.3.6",
+    "jquery": "^3.4.1",
+    "uikit": "^3.2.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.7",
-    "@babel/preset-env": "^7.24.7",
-    "@babel/preset-react": "^7.24.7",
-    "babel-loader": "^9.1.3",
-    "gulp": "^5.0.0",
-    "gulp-sass": "^5.1.0",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "webpack": "^5.92.1",
-    "webpack-cli": "^5.1.4"
+    "@babel/core": "^7.7.0",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-react": "^7.7.0",
+    "babel-loader": "^8.0.6",
+    "gulp": "^4.0.2",
+    "gulp-sass": "^4.0.2",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-stream": "^5.2.1"
   }
 }
